filter implemented in both frontend and Backend
